# chip

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  helper.cpp  lorem  main.cpp  menus
cmd/: command.h
data/: menus
food/: food.h  foodUtils.h  helper.cpp  menu.h  menuUtils.h  menus
food/include/: Food.h  FoodUtils.h  Menu.h  food.h  foodType.h  foodUtils.h  menu.h  menuUtils.h
food/src/: Food.cpp  Menu.cpp  food.cpp  foodUtils.cpp  menu.cpp  menuUtils.cpp
include/: Communicator.h  Menu.h  Utils.h
network/include/: network.h
network/src/: network.cpp
nfc/: nfcManager.h  nfcUtils.h
nfc/include/: Communicator.h  NfcUtils.h  apdu.h  apduCmd.h  apduResp.h  nfcManager.h  nfcRequest.h  nfcUtils.h
nfc/src/: Communicator.cpp  apdu.cpp  apduCmd.cpp  apduResp.cpp  nfcManager.cpp  nfcRequest.cpp  nfcUtils.cpp
src/: Communicator.cpp  main.cpp
